updated readme, made more java types as clojure data collection compilable, added mor java-cloj support